# brl_parliament_mcp

./: .gitignore  README.md
legacy_senate_api/: readme.md  requirements.txt
legacy_senate_api/src/: setup.py
legacy_senate_api/src/gov_proposals_explainer/: main.py  resources.py
legacy_senate_api/src/gov_proposals_explainer/clients/: __init__.py  base_client.py  senate_client.py
legacy_senate_api/src/gov_proposals_explainer/routers/: __init__.py  senate_router.py
legacy_senate_api/src/gov_proposals_explainer/schemas/: __init__.py  senate_schemas.py
legacy_senate_api/src/gov_proposals_explainer/services/: __init__.py  senate_services.py
mcp_brl_congress/: README.md  pyproject.toml
mcp_brl_congress/src/mcp_brl_congress/: mcp_server.py  utils.py
mcp_senate/: README.md  mcp_server.py  pyproject.toml
