[project]
name = "mcp_brl_congress"
version = "0.1.0"
description = "MCP Server for Brazilian National Congress"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "pymupdf>=1.26.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp_brl_congress = "mcp_brl_congress.mcp_server:main"